# ot-harjoitustyo

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
documentation/: architecture.md  requirements.md  testing.md  usage.md  workhours.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: src.txt  task3.src  task4.src
src/: debug.py  index.py  main.py  pyproject.toml
src/GUI/: gamescene.py  gamescene_menus.py  intro.py  mainmenu.py
src/classes/: interrogation.py  notes.py  npc.py  room.py  save.py  scenariogenerator.py  time.py
src/data/: names.txt
src/data/saves/: .gitignore
src/tests/: interrogation_test.py  notes_test.py  save_test.py  scenario_test.py  time_test.py
