[tool.poetry]
name = "OhTe Murder Mystery"
version = "0.1.0"
description = "A small scale murder mystery game for a university course."
authors = ["Veloxization <github@velo.anonaddy.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
