[tool.poetry]
name = "maksukortti"
version = "0.1.0"
description = ""
authors = ["Veloxization"]

[tool.poetry.dependencies]
python = "^3.6"
invoke = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
